# ml_kiva

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  ml_kiva.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: main.yml  ml-pipeline-ci.yml
models/: kiva_pipeline.joblib
src/ml_kiva/: components.py  nlp.py  preprocess.py  report.py  train.py  utils.py
src/ml_kiva.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py  test_preprocess.py
