[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_kiva"
version = "0.1.0"
description = "Multi-column loan funding prediction using NLP and Scikit-Learn"
dependencies = [
    "pandas",
    "scikit-learn",
    "joblib",
    "matplotlib",
    "plotly",
    "streamlit",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_kiva*"]